--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,14 +13,14 @@
         </h4><br />
         <%= post.content %>
 
-        <% if current_user.admin? %>
+        <% if current_user.admin? && current_user.id == post.user_id %>
           <h6>Written by <%= post.user.email %></h6>
-        <% end %>
         </td>
         <td><%= link_to 'Show', post %><br />
         <%= link_to 'Edit', edit_post_path(post) %><br />
         <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+        <% end %>
     <% end %>
   </tbody>
 </table>
